AnalizadorSintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CDER

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> algoritmo
Rule 2     codigo -> algoritmo codigo
Rule 3     algoritmo -> asignacion
Rule 4     algoritmo -> sentenciaWHILE
Rule 5     algoritmo -> sentenciaFOR
Rule 6     algoritmo -> puts
Rule 7     algoritmo -> unless
Rule 8     algoritmo -> comentarios
Rule 9     algoritmo -> sentenciaIf
Rule 10    algoritmo -> sentenciaCASE
Rule 11    algoritmo -> slicing
Rule 12    algoritmo -> sentenciaBegin
Rule 13    algoritmo -> sentenciaFuncion
Rule 14    algoritmo -> split
Rule 15    algoritmo -> push
Rule 16    algoritmo -> append
Rule 17    algoritmo -> pop
Rule 18    unless -> UNLESS comparacion codigo END
Rule 19    sentenciaFOR -> FOR variables IN range DO codigo END
Rule 20    range -> ENTERO RANGO ENTERO
Rule 21    puts -> PUTS valor
Rule 22    reverse -> CADENA PUNTO REVERSE
Rule 23    split -> CADENA PUNTO SPLIT PIZQ valorsplit PDER
Rule 24    push -> variables PUNTO PUSH PIZQ valor PDER
Rule 25    append -> variables PUNTO APPEND PIZQ valor PDER
Rule 26    pop -> variables PUNTO POP PIZQ valor PDER
Rule 27    pop -> variables PUNTO POP PIZQ PDER
Rule 28    valorsplit -> CADENA
Rule 29    valorsplit -> CADENA COMA ENTERO
Rule 30    include -> CADENA PUNTO INCLUDE INTERROGACION CADENA
Rule 31    sentenciaFuncion -> FUNCION variables codigo END
Rule 32    sentenciaWHILE -> WHILE comparacion DO codigo END
Rule 33    sentenciaCASE -> CASE variables sentenciaWhens ELSE codigo END
Rule 34    sentenciaWHEN -> WHEN valorSencillo codigo
Rule 35    sentenciaWHEN -> WHEN valorSencillo THEN codigo
Rule 36    sentenciaAND -> comparacion AND comparacion
Rule 37    sentenciaOR -> comparacion OR comparacion
Rule 38    sentenciaWhens -> sentenciaWHEN
Rule 39    sentenciaWhens -> sentenciaWHEN sentenciaWhens
Rule 40    valorSencillo -> ENTERO
Rule 41    valorSencillo -> variables
Rule 42    valorSencillo -> CADENA
Rule 43    valorSencillo -> RANGO
Rule 44    sentenciaBegin -> BEGIN codigo END
Rule 45    asignacion -> variables IGUAL expresion
Rule 46    expresion -> valor
Rule 47    slicing -> variables CIZQ ENTERO
Rule 48    slicing -> variables CIZQ ENTERO COMA ENTERO
Rule 49    slicing -> variables CIZQ RANGO
Rule 50    slicing -> variables CIZQ CADENA
Rule 51    expresion -> valor operadorMat expresion
Rule 52    expresion -> PIZQ valor operadorMat expresion PDER
Rule 53    comparacion -> expresion operadorComp expresion
Rule 54    comparacion -> PIZQ expresion PDER operadorComp expresion
Rule 55    comparacion -> PIZQ expresion operadorComp expresion PDER
Rule 56    comparaciones -> comparacion
Rule 57    comparaciones -> sentenciaAND
Rule 58    comparaciones -> sentenciaOR
Rule 59    sentenciaBREAK -> BREAK
Rule 60    sentenciaBREAK -> BREAK variables
Rule 61    operadorMat -> MAS
Rule 62    operadorMat -> RESTA
Rule 63    operadorMat -> PROD
Rule 64    operadorMat -> DIVISION
Rule 65    operadorMat -> POTENCIA
Rule 66    operadorComp -> MAYOR
Rule 67    operadorComp -> MENOR
Rule 68    operadorComp -> COMP_IGUAL
Rule 69    operadorComp -> DIFERENTE
Rule 70    valor -> ENTERO
Rule 71    valor -> variables
Rule 72    valor -> CADENA
Rule 73    valor -> HASH
Rule 74    valor -> ARRAY
Rule 75    valor -> split
Rule 76    valor -> include
Rule 77    valor -> reverse
Rule 78    variables -> VARIABLE_LOCAL
Rule 79    variables -> VARIABLE_GLOBAL
Rule 80    variables -> VARIABLE_OBJETO
Rule 81    variables -> VARIABLE_CLASE
Rule 82    variables -> CONSTANTE
Rule 83    sentenciaIf -> IF comparaciones codigo finalIf
Rule 84    finalIf -> END
Rule 85    finalIf -> sentenciaBREAK END
Rule 86    comentarios -> COMENTARIO

Terminals, with rules where they appear

AND                  : 36
APPEND               : 25
ARRAY                : 74
BEGIN                : 44
BREAK                : 59 60
CADENA               : 22 23 28 29 30 30 42 50 72
CASE                 : 33
CDER                 : 
CIZQ                 : 47 48 49 50
COMA                 : 29 48
COMENTARIO           : 86
COMP_IGUAL           : 68
CONSTANTE            : 82
DIFERENTE            : 69
DIVISION             : 64
DO                   : 19 32
ELSE                 : 33
END                  : 18 19 31 32 33 44 84 85
ENTERO               : 20 20 29 40 47 48 48 70
FOR                  : 19
FUNCION              : 31
HASH                 : 73
IF                   : 83
IGUAL                : 45
IN                   : 19
INCLUDE              : 30
INTERROGACION        : 30
MAS                  : 61
MAYOR                : 66
MENOR                : 67
OR                   : 37
PDER                 : 23 24 25 26 27 52 54 55
PIZQ                 : 23 24 25 26 27 52 54 55
POP                  : 26 27
POTENCIA             : 65
PROD                 : 63
PUNTO                : 22 23 24 25 26 27 30
PUSH                 : 24
PUTS                 : 21
RANGO                : 20 43 49
RESTA                : 62
REVERSE              : 22
SPLIT                : 23
THEN                 : 35
UNLESS               : 18
VARIABLE_CLASE       : 81
VARIABLE_GLOBAL      : 79
VARIABLE_LOCAL       : 78
VARIABLE_OBJETO      : 80
WHEN                 : 34 35
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

algoritmo            : 1 2
append               : 16
asignacion           : 3
codigo               : 2 18 19 31 32 33 34 35 44 83 0
comentarios          : 8
comparacion          : 18 32 36 36 37 37 56
comparaciones        : 83
expresion            : 45 51 52 53 53 54 54 55 55
finalIf              : 83
include              : 76
operadorComp         : 53 54 55
operadorMat          : 51 52
pop                  : 17
push                 : 15
puts                 : 6
range                : 19
reverse              : 77
sentenciaAND         : 57
sentenciaBREAK       : 85
sentenciaBegin       : 12
sentenciaCASE        : 10
sentenciaFOR         : 5
sentenciaFuncion     : 13
sentenciaIf          : 9
sentenciaOR          : 58
sentenciaWHEN        : 38 39
sentenciaWHILE       : 4
sentenciaWhens       : 33 39
slicing              : 11
split                : 14 75
unless               : 7
valor                : 21 24 25 26 46 51 52
valorSencillo        : 34 35
valorsplit           : 23
variables            : 19 24 25 26 27 31 33 41 45 47 48 49 50 60 71

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaFOR
    (6) algoritmo -> . puts
    (7) algoritmo -> . unless
    (8) algoritmo -> . comentarios
    (9) algoritmo -> . sentenciaIf
    (10) algoritmo -> . sentenciaCASE
    (11) algoritmo -> . slicing
    (12) algoritmo -> . sentenciaBegin
    (13) algoritmo -> . sentenciaFuncion
    (14) algoritmo -> . split
    (15) algoritmo -> . push
    (16) algoritmo -> . append
    (17) algoritmo -> . pop
    (45) asignacion -> . variables IGUAL expresion
    (32) sentenciaWHILE -> . WHILE comparacion DO codigo END
    (19) sentenciaFOR -> . FOR variables IN range DO codigo END
    (21) puts -> . PUTS valor
    (18) unless -> . UNLESS comparacion codigo END
    (86) comentarios -> . COMENTARIO
    (83) sentenciaIf -> . IF comparaciones codigo finalIf
    (33) sentenciaCASE -> . CASE variables sentenciaWhens ELSE codigo END
    (47) slicing -> . variables CIZQ ENTERO
    (48) slicing -> . variables CIZQ ENTERO COMA ENTERO
    (49) slicing -> . variables CIZQ RANGO
    (50) slicing -> . variables CIZQ CADENA
    (44) sentenciaBegin -> . BEGIN codigo END
    (31) sentenciaFuncion -> . FUNCION variables codigo END
    (23) split -> . CADENA PUNTO SPLIT PIZQ valorsplit PDER
    (24) push -> . variables PUNTO PUSH PIZQ valor PDER
    (25) append -> . variables PUNTO APPEND PIZQ valor PDER
    (26) pop -> . variables PUNTO POP PIZQ valor PDER
    (27) pop -> . variables PUNTO POP PIZQ PDER
    (78) variables -> . VARIABLE_LOCAL
    (79) variables -> . VARIABLE_GLOBAL
    (80) variables -> . VARIABLE_OBJETO
    (81) variables -> . VARIABLE_CLASE
    (82) variables -> . CONSTANTE

    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    PUTS            shift and go to state 21
    UNLESS          shift and go to state 22
    COMENTARIO      shift and go to state 23
    IF              shift and go to state 24
    CASE            shift and go to state 25
    BEGIN           shift and go to state 27
    FUNCION         shift and go to state 28
    CADENA          shift and go to state 26
    VARIABLE_LOCAL  shift and go to state 29
    VARIABLE_GLOBAL shift and go to state 30
    VARIABLE_OBJETO shift and go to state 31
    VARIABLE_CLASE  shift and go to state 32
    CONSTANTE       shift and go to state 33

    codigo                         shift and go to state 1
    algoritmo                      shift and go to state 2
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaFOR                   shift and go to state 5
    puts                           shift and go to state 6
    unless                         shift and go to state 7
    comentarios                    shift and go to state 8
    sentenciaIf                    shift and go to state 9
    sentenciaCASE                  shift and go to state 10
    slicing                        shift and go to state 11
    sentenciaBegin                 shift and go to state 12
    sentenciaFuncion               shift and go to state 13
    split                          shift and go to state 14
    push                           shift and go to state 15
    append                         shift and go to state 16
    pop                            shift and go to state 17
    variables                      shift and go to state 18

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> algoritmo .
    (2) codigo -> algoritmo . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaFOR
    (6) algoritmo -> . puts
    (7) algoritmo -> . unless
    (8) algoritmo -> . comentarios
    (9) algoritmo -> . sentenciaIf
    (10) algoritmo -> . sentenciaCASE
    (11) algoritmo -> . slicing
    (12) algoritmo -> . sentenciaBegin
    (13) algoritmo -> . sentenciaFuncion
    (14) algoritmo -> . split
    (15) algoritmo -> . push
    (16) algoritmo -> . append
    (17) algoritmo -> . pop
    (45) asignacion -> . variables IGUAL expresion
    (32) sentenciaWHILE -> . WHILE comparacion DO codigo END
    (19) sentenciaFOR -> . FOR variables IN range DO codigo END
    (21) puts -> . PUTS valor
    (18) unless -> . UNLESS comparacion codigo END
    (86) comentarios -> . COMENTARIO
    (83) sentenciaIf -> . IF comparaciones codigo finalIf
    (33) sentenciaCASE -> . CASE variables sentenciaWhens ELSE codigo END
    (47) slicing -> . variables CIZQ ENTERO
    (48) slicing -> . variables CIZQ ENTERO COMA ENTERO
    (49) slicing -> . variables CIZQ RANGO
    (50) slicing -> . variables CIZQ CADENA
    (44) sentenciaBegin -> . BEGIN codigo END
    (31) sentenciaFuncion -> . FUNCION variables codigo END
    (23) split -> . CADENA PUNTO SPLIT PIZQ valorsplit PDER
    (24) push -> . variables PUNTO PUSH PIZQ valor PDER
    (25) append -> . variables PUNTO APPEND PIZQ valor PDER
    (26) pop -> . variables PUNTO POP PIZQ valor PDER
    (27) pop -> . variables PUNTO POP PIZQ PDER
    (78) variables -> . VARIABLE_LOCAL
    (79) variables -> . VARIABLE_GLOBAL
    (80) variables -> . VARIABLE_OBJETO
    (81) variables -> . VARIABLE_CLASE
    (82) variables -> . CONSTANTE

    $end            reduce using rule 1 (codigo -> algoritmo .)
    END             reduce using rule 1 (codigo -> algoritmo .)
    BREAK           reduce using rule 1 (codigo -> algoritmo .)
    WHEN            reduce using rule 1 (codigo -> algoritmo .)
    ELSE            reduce using rule 1 (codigo -> algoritmo .)
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    PUTS            shift and go to state 21
    UNLESS          shift and go to state 22
    COMENTARIO      shift and go to state 23
    IF              shift and go to state 24
    CASE            shift and go to state 25
    BEGIN           shift and go to state 27
    FUNCION         shift and go to state 28
    CADENA          shift and go to state 26
    VARIABLE_LOCAL  shift and go to state 29
    VARIABLE_GLOBAL shift and go to state 30
    VARIABLE_OBJETO shift and go to state 31
    VARIABLE_CLASE  shift and go to state 32
    CONSTANTE       shift and go to state 33

    algoritmo                      shift and go to state 2
    codigo                         shift and go to state 34
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaFOR                   shift and go to state 5
    puts                           shift and go to state 6
    unless                         shift and go to state 7
    comentarios                    shift and go to state 8
    sentenciaIf                    shift and go to state 9
    sentenciaCASE                  shift and go to state 10
    slicing                        shift and go to state 11
    sentenciaBegin                 shift and go to state 12
    sentenciaFuncion               shift and go to state 13
    split                          shift and go to state 14
    push                           shift and go to state 15
    append                         shift and go to state 16
    pop                            shift and go to state 17
    variables                      shift and go to state 18

state 3

    (3) algoritmo -> asignacion .

    WHILE           reduce using rule 3 (algoritmo -> asignacion .)
    FOR             reduce using rule 3 (algoritmo -> asignacion .)
    PUTS            reduce using rule 3 (algoritmo -> asignacion .)
    UNLESS          reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIO      reduce using rule 3 (algoritmo -> asignacion .)
    IF              reduce using rule 3 (algoritmo -> asignacion .)
    CASE            reduce using rule 3 (algoritmo -> asignacion .)
    BEGIN           reduce using rule 3 (algoritmo -> asignacion .)
    FUNCION         reduce using rule 3 (algoritmo -> asignacion .)
    CADENA          reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_LOCAL  reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_GLOBAL reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_OBJETO reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_CLASE  reduce using rule 3 (algoritmo -> asignacion .)
    CONSTANTE       reduce using rule 3 (algoritmo -> asignacion .)
    $end            reduce using rule 3 (algoritmo -> asignacion .)
    END             reduce using rule 3 (algoritmo -> asignacion .)
    BREAK           reduce using rule 3 (algoritmo -> asignacion .)
    WHEN            reduce using rule 3 (algoritmo -> asignacion .)
    ELSE            reduce using rule 3 (algoritmo -> asignacion .)


state 4

    (4) algoritmo -> sentenciaWHILE .

    WHILE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FOR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    PUTS            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    UNLESS          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIO      reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    IF              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CASE            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    BEGIN           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FUNCION         reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CADENA          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_LOCAL  reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_GLOBAL reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_OBJETO reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_CLASE  reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONSTANTE       reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    $end            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    END             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    BREAK           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    WHEN            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    ELSE            reduce using rule 4 (algoritmo -> sentenciaWHILE .)


state 5

    (5) algoritmo -> sentenciaFOR .

    WHILE           reduce using rule 5 (algoritmo -> sentenciaFOR .)
    FOR             reduce using rule 5 (algoritmo -> sentenciaFOR .)
    PUTS            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    UNLESS          reduce using rule 5 (algoritmo -> sentenciaFOR .)
    COMENTARIO      reduce using rule 5 (algoritmo -> sentenciaFOR .)
    IF              reduce using rule 5 (algoritmo -> sentenciaFOR .)
    CASE            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    BEGIN           reduce using rule 5 (algoritmo -> sentenciaFOR .)
    FUNCION         reduce using rule 5 (algoritmo -> sentenciaFOR .)
    CADENA          reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_LOCAL  reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_GLOBAL reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_OBJETO reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_CLASE  reduce using rule 5 (algoritmo -> sentenciaFOR .)
    CONSTANTE       reduce using rule 5 (algoritmo -> sentenciaFOR .)
    $end            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    END             reduce using rule 5 (algoritmo -> sentenciaFOR .)
    BREAK           reduce using rule 5 (algoritmo -> sentenciaFOR .)
    WHEN            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    ELSE            reduce using rule 5 (algoritmo -> sentenciaFOR .)


state 6

    (6) algoritmo -> puts .

    WHILE           reduce using rule 6 (algoritmo -> puts .)
    FOR             reduce using rule 6 (algoritmo -> puts .)
    PUTS            reduce using rule 6 (algoritmo -> puts .)
    UNLESS          reduce using rule 6 (algoritmo -> puts .)
    COMENTARIO      reduce using rule 6 (algoritmo -> puts .)
    IF              reduce using rule 6 (algoritmo -> puts .)
    CASE            reduce using rule 6 (algoritmo -> puts .)
    BEGIN           reduce using rule 6 (algoritmo -> puts .)
    FUNCION         reduce using rule 6 (algoritmo -> puts .)
    CADENA          reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_LOCAL  reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_GLOBAL reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_OBJETO reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_CLASE  reduce using rule 6 (algoritmo -> puts .)
    CONSTANTE       reduce using rule 6 (algoritmo -> puts .)
    $end            reduce using rule 6 (algoritmo -> puts .)
    END             reduce using rule 6 (algoritmo -> puts .)
    BREAK           reduce using rule 6 (algoritmo -> puts .)
    WHEN            reduce using rule 6 (algoritmo -> puts .)
    ELSE            reduce using rule 6 (algoritmo -> puts .)


state 7

    (7) algoritmo -> unless .

    WHILE           reduce using rule 7 (algoritmo -> unless .)
    FOR             reduce using rule 7 (algoritmo -> unless .)
    PUTS            reduce using rule 7 (algoritmo -> unless .)
    UNLESS          reduce using rule 7 (algoritmo -> unless .)
    COMENTARIO      reduce using rule 7 (algoritmo -> unless .)
    IF              reduce using rule 7 (algoritmo -> unless .)
    CASE            reduce using rule 7 (algoritmo -> unless .)
    BEGIN           reduce using rule 7 (algoritmo -> unless .)
    FUNCION         reduce using rule 7 (algoritmo -> unless .)
    CADENA          reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_LOCAL  reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_GLOBAL reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_OBJETO reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_CLASE  reduce using rule 7 (algoritmo -> unless .)
    CONSTANTE       reduce using rule 7 (algoritmo -> unless .)
    $end            reduce using rule 7 (algoritmo -> unless .)
    END             reduce using rule 7 (algoritmo -> unless .)
    BREAK           reduce using rule 7 (algoritmo -> unless .)
    WHEN            reduce using rule 7 (algoritmo -> unless .)
    ELSE            reduce using rule 7 (algoritmo -> unless .)


state 8

    (8) algoritmo -> comentarios .

    WHILE           reduce using rule 8 (algoritmo -> comentarios .)
    FOR             reduce using rule 8 (algoritmo -> comentarios .)
    PUTS            reduce using rule 8 (algoritmo -> comentarios .)
    UNLESS          reduce using rule 8 (algoritmo -> comentarios .)
    COMENTARIO      reduce using rule 8 (algoritmo -> comentarios .)
    IF              reduce using rule 8 (algoritmo -> comentarios .)
    CASE            reduce using rule 8 (algoritmo -> comentarios .)
    BEGIN           reduce using rule 8 (algoritmo -> comentarios .)
    FUNCION         reduce using rule 8 (algoritmo -> comentarios .)
    CADENA          reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_LOCAL  reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_GLOBAL reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_OBJETO reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_CLASE  reduce using rule 8 (algoritmo -> comentarios .)
    CONSTANTE       reduce using rule 8 (algoritmo -> comentarios .)
    $end            reduce using rule 8 (algoritmo -> comentarios .)
    END             reduce using rule 8 (algoritmo -> comentarios .)
    BREAK           reduce using rule 8 (algoritmo -> comentarios .)
    WHEN            reduce using rule 8 (algoritmo -> comentarios .)
    ELSE            reduce using rule 8 (algoritmo -> comentarios .)


state 9

    (9) algoritmo -> sentenciaIf .

    WHILE           reduce using rule 9 (algoritmo -> sentenciaIf .)
    FOR             reduce using rule 9 (algoritmo -> sentenciaIf .)
    PUTS            reduce using rule 9 (algoritmo -> sentenciaIf .)
    UNLESS          reduce using rule 9 (algoritmo -> sentenciaIf .)
    COMENTARIO      reduce using rule 9 (algoritmo -> sentenciaIf .)
    IF              reduce using rule 9 (algoritmo -> sentenciaIf .)
    CASE            reduce using rule 9 (algoritmo -> sentenciaIf .)
    BEGIN           reduce using rule 9 (algoritmo -> sentenciaIf .)
    FUNCION         reduce using rule 9 (algoritmo -> sentenciaIf .)
    CADENA          reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_LOCAL  reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_GLOBAL reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_OBJETO reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_CLASE  reduce using rule 9 (algoritmo -> sentenciaIf .)
    CONSTANTE       reduce using rule 9 (algoritmo -> sentenciaIf .)
    $end            reduce using rule 9 (algoritmo -> sentenciaIf .)
    END             reduce using rule 9 (algoritmo -> sentenciaIf .)
    BREAK           reduce using rule 9 (algoritmo -> sentenciaIf .)
    WHEN            reduce using rule 9 (algoritmo -> sentenciaIf .)
    ELSE            reduce using rule 9 (algoritmo -> sentenciaIf .)


state 10

    (10) algoritmo -> sentenciaCASE .

    WHILE           reduce using rule 10 (algoritmo -> sentenciaCASE .)
    FOR             reduce using rule 10 (algoritmo -> sentenciaCASE .)
    PUTS            reduce using rule 10 (algoritmo -> sentenciaCASE .)
    UNLESS          reduce using rule 10 (algoritmo -> sentenciaCASE .)
    COMENTARIO      reduce using rule 10 (algoritmo -> sentenciaCASE .)
    IF              reduce using rule 10 (algoritmo -> sentenciaCASE .)
    CASE            reduce using rule 10 (algoritmo -> sentenciaCASE .)
    BEGIN           reduce using rule 10 (algoritmo -> sentenciaCASE .)
    FUNCION         reduce using rule 10 (algoritmo -> sentenciaCASE .)
    CADENA          reduce using rule 10 (algoritmo -> sentenciaCASE .)
    VARIABLE_LOCAL  reduce using rule 10 (algoritmo -> sentenciaCASE .)
    VARIABLE_GLOBAL reduce using rule 10 (algoritmo -> sentenciaCASE .)
    VARIABLE_OBJETO reduce using rule 10 (algoritmo -> sentenciaCASE .)
    VARIABLE_CLASE  reduce using rule 10 (algoritmo -> sentenciaCASE .)
    CONSTANTE       reduce using rule 10 (algoritmo -> sentenciaCASE .)
    $end            reduce using rule 10 (algoritmo -> sentenciaCASE .)
    END             reduce using rule 10 (algoritmo -> sentenciaCASE .)
    BREAK           reduce using rule 10 (algoritmo -> sentenciaCASE .)
    WHEN            reduce using rule 10 (algoritmo -> sentenciaCASE .)
    ELSE            reduce using rule 10 (algoritmo -> sentenciaCASE .)


state 11

    (11) algoritmo -> slicing .

    WHILE           reduce using rule 11 (algoritmo -> slicing .)
    FOR             reduce using rule 11 (algoritmo -> slicing .)
    PUTS            reduce using rule 11 (algoritmo -> slicing .)
    UNLESS          reduce using rule 11 (algoritmo -> slicing .)
    COMENTARIO      reduce using rule 11 (algoritmo -> slicing .)
    IF              reduce using rule 11 (algoritmo -> slicing .)
    CASE            reduce using rule 11 (algoritmo -> slicing .)
    BEGIN           reduce using rule 11 (algoritmo -> slicing .)
    FUNCION         reduce using rule 11 (algoritmo -> slicing .)
    CADENA          reduce using rule 11 (algoritmo -> slicing .)
    VARIABLE_LOCAL  reduce using rule 11 (algoritmo -> slicing .)
    VARIABLE_GLOBAL reduce using rule 11 (algoritmo -> slicing .)
    VARIABLE_OBJETO reduce using rule 11 (algoritmo -> slicing .)
    VARIABLE_CLASE  reduce using rule 11 (algoritmo -> slicing .)
    CONSTANTE       reduce using rule 11 (algoritmo -> slicing .)
    $end            reduce using rule 11 (algoritmo -> slicing .)
    END             reduce using rule 11 (algoritmo -> slicing .)
    BREAK           reduce using rule 11 (algoritmo -> slicing .)
    WHEN            reduce using rule 11 (algoritmo -> slicing .)
    ELSE            reduce using rule 11 (algoritmo -> slicing .)


state 12

    (12) algoritmo -> sentenciaBegin .

    WHILE           reduce using rule 12 (algoritmo -> sentenciaBegin .)
    FOR             reduce using rule 12 (algoritmo -> sentenciaBegin .)
    PUTS            reduce using rule 12 (algoritmo -> sentenciaBegin .)
    UNLESS          reduce using rule 12 (algoritmo -> sentenciaBegin .)
    COMENTARIO      reduce using rule 12 (algoritmo -> sentenciaBegin .)
    IF              reduce using rule 12 (algoritmo -> sentenciaBegin .)
    CASE            reduce using rule 12 (algoritmo -> sentenciaBegin .)
    BEGIN           reduce using rule 12 (algoritmo -> sentenciaBegin .)
    FUNCION         reduce using rule 12 (algoritmo -> sentenciaBegin .)
    CADENA          reduce using rule 12 (algoritmo -> sentenciaBegin .)
    VARIABLE_LOCAL  reduce using rule 12 (algoritmo -> sentenciaBegin .)
    VARIABLE_GLOBAL reduce using rule 12 (algoritmo -> sentenciaBegin .)
    VARIABLE_OBJETO reduce using rule 12 (algoritmo -> sentenciaBegin .)
    VARIABLE_CLASE  reduce using rule 12 (algoritmo -> sentenciaBegin .)
    CONSTANTE       reduce using rule 12 (algoritmo -> sentenciaBegin .)
    $end            reduce using rule 12 (algoritmo -> sentenciaBegin .)
    END             reduce using rule 12 (algoritmo -> sentenciaBegin .)
    BREAK           reduce using rule 12 (algoritmo -> sentenciaBegin .)
    WHEN            reduce using rule 12 (algoritmo -> sentenciaBegin .)
    ELSE            reduce using rule 12 (algoritmo -> sentenciaBegin .)


state 13

    (13) algoritmo -> sentenciaFuncion .

    WHILE           reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    FOR             reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    PUTS            reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    UNLESS          reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    COMENTARIO      reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    IF              reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    CASE            reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    BEGIN           reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    FUNCION         reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    CADENA          reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    VARIABLE_LOCAL  reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    VARIABLE_GLOBAL reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    VARIABLE_OBJETO reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    VARIABLE_CLASE  reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    CONSTANTE       reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    $end            reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    END             reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    BREAK           reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    WHEN            reduce using rule 13 (algoritmo -> sentenciaFuncion .)
    ELSE            reduce using rule 13 (algoritmo -> sentenciaFuncion .)


state 14

    (14) algoritmo -> split .

    WHILE           reduce using rule 14 (algoritmo -> split .)
    FOR             reduce using rule 14 (algoritmo -> split .)
    PUTS            reduce using rule 14 (algoritmo -> split .)
    UNLESS          reduce using rule 14 (algoritmo -> split .)
    COMENTARIO      reduce using rule 14 (algoritmo -> split .)
    IF              reduce using rule 14 (algoritmo -> split .)
    CASE            reduce using rule 14 (algoritmo -> split .)
    BEGIN           reduce using rule 14 (algoritmo -> split .)
    FUNCION         reduce using rule 14 (algoritmo -> split .)
    CADENA          reduce using rule 14 (algoritmo -> split .)
    VARIABLE_LOCAL  reduce using rule 14 (algoritmo -> split .)
    VARIABLE_GLOBAL reduce using rule 14 (algoritmo -> split .)
    VARIABLE_OBJETO reduce using rule 14 (algoritmo -> split .)
    VARIABLE_CLASE  reduce using rule 14 (algoritmo -> split .)
    CONSTANTE       reduce using rule 14 (algoritmo -> split .)
    $end            reduce using rule 14 (algoritmo -> split .)
    END             reduce using rule 14 (algoritmo -> split .)
    BREAK           reduce using rule 14 (algoritmo -> split .)
    WHEN            reduce using rule 14 (algoritmo -> split .)
    ELSE            reduce using rule 14 (algoritmo -> split .)


state 15

    (15) algoritmo -> push .
